# Agent-dev

./: .env  .gitignore  01_main.py  02_streaming_response.py  03_langchain.py  04_llm_Settings  05_prompting  5.1_zero_shot.py  material.txt  practice.py  pyproject.toml
