[project]
name = "agentic_ai"
version = "0.1.0"
description = "An agentic AI framework for autonomous task execution and workflow orchestration."
authors = [
    {name = "Saqib52",email = "saqibjawad.ai@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "google-genai (>=1.65.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-google-genai (>=4.2.3,<5.0.0)"
]

[dependency-groups]
dev = [
    "fastapi (>=0.136.1,<0.137.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
